irnusdl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: irnusdl
  namespace: irnusdl
spec:
  selector:
    app: irnusdl
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
